# Datum

./: .env  README.md  ROADMAP.md  audit_test.txt  bigdeal.json  bob.pub  chain_gold.json  chain_intel.json  chain_spice.json  custom_genesis_test.json  datum_chain.json  gemini-conversation-1766605448715.json  gemini-conversation-1766605530488.json  gemini-conversation-1766606360219.json  hpc_demo_chain.json  paper.txt  pyproject.toml  secret_project.json  spy_network.json
.github/workflows/: ci.yml
hpc_sim/: blockchain.py  scheduler.py  server.py
src/datum/: __main__.py  cli.py  config.py  core.py  schemas.py  utils.py  wallet.py
src/datum/demos/: bazaar.py  hpc.py  spy.py
tests/: test_cli.py  test_cli_transfer.py  test_config.py  test_core.py  test_genesis.py
